--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^0.0.0-experimental-c4676e72-20250520",
-    "react-dom": "^0.0.0-experimental-c4676e72-20250520"
+    "react-dom": "^0.0.0-experimental-c4676e72-20250520",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
